2015 March 08, Ulf Griesmann
- version 122
- corrected error messages in Structures/gdsii_multref.m
- fixed the messages warning about undefined units in overloaded
  operators for the @gds_element class.
- In @gds_library/write_gds_library.m make it an option to turn off
  the check for uniqueness of structure names because the test can be
  time consuming when there are many structures.
- updated version of Clipper library to 6.2.1
- new function Structures/gdsii_zonelens.m to generate layouts
  consisting of nested concentric rings.
- tweak to Elements/gdsii_arc.m
      
2015-March-05, Ulf Griesmann
- version 120
- @gds_library/subtree.m returns a cell array of gds_structure
  objects.
- made methods @gds_structure/add_element.m and
  @gds_library/add_struct.m more robust. Now handles
  row and column vectors of elements or structures
  correctly.
- angle argument in gdsii_ptext.m is now specified in degrees
  instead of radians, because we use degrees throughout the toolbox.

2014-October-20, Ulf Griesmann
- fix help text of gdsii_ptext.m; argument 'noel' no longer
  exists.
- eliminate omakemex.m; makemex.m is also used on Octave/Windows
- rotation angle in degrees in 'gdsii_grating.m'.
- replace gdsint --> intmax_t

2014-September-27, Ulf Griesmann
- version 118d
- final version before git version control.

2014-September-26, Ulf Griesmann
- version 118c
- more extensive example in the help text of
  @gds_structure/add_ref.m
- fixed an error in an error message in @gds_structure/add_element.m
  and replaced for ... --> cellfun.
- replaced for ... --> cellfun in @gds_library/add_struct.m

2014-September-19, Ulf Griesmann
- version 118b
- more argument checking in @gds_library/write_gds_library.m method.
- fix another small bug in @gds_library/write_gds_library.m method: library
  info is always displayed when verbose > 0.

2014-August-30, Ulf Griesmann
- version 118a
- close all glyph polygons in Elements/gdsii_ptext.m